--- a/src/partials/article.hbs
+++ b/src/partials/article.hbs
@@ -4,4 +4,22 @@
 {{/with}}
 {{{page.contents}}}
 {{> pagination}}
+
+<br />
+<script src="https://giscus.app/client.js"
+        data-repo="heiss-blog/antora"
+        data-repo-id="R_kgDOI3Kb3Q"
+        data-category="Comments"
+        data-category-id="DIC_kwDOI3Kb3c4CT3om"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
 </article>
